src/styles/blocks/events.scss
.image-hover {
  @include hover(transform, scale(110%));
}

.actual-events {
  position: relative;
  margin-bottom: 120px;

  @include onTablet {
    margin-bottom: 164px;
  }

  @include onDesktop {
    margin-bottom: 200px;
  }
}

.events {
  &__title {
    margin-bottom: 60px;

    @include onTablet {
      margin-bottom: 75px;
      font-size: 40px;
    }

    @include onDesktop {
      font-size: 48px;
    }
  }
}

.event-card {

  &__image {
    display: block;
    width: 100%;
    margin: 0 auto 20px;

    @include onTablet {
      margin-bottom: 30px;
    }
  }

  &__schedule {
    margin-bottom: 10px;
    color: $main;
  }

  &__title {
    margin-bottom: 20px;
    line-height: 125%;

    @include onTablet {
      margin-bottom: 30px;
    }

    @include onDesktop {
      font-size: 24px;
    }
    
  }

  &__description {
    margin-bottom: 30px;

    @include onTablet {
      margin-bottom: 45px;
    }
  }

  &__button {
    margin-bottom: 30px;
  }

  &__addition-margin {
    @include onTablet {
      margin-bottom: 70px;
    }
  }

  &__content {
    margin-bottom: 60px;
  }
}

.upcoming-events {
  position: relative;
  margin-bottom: 90px;

  @include onTablet {
    margin-bottom: 100px;
  }

  @include onDesktop {
    margin-bottom: 110px;
  }

  &__title {
    @include onTablet {
      font-size: 24px;
    }
  }
}

